--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -1,3 +1,5 @@
 # Mano de león *Nodipecten subnodosus*
 
 Es una especie de la familia Pectinidae y se distribuye en las costas occidentales del sur de la península de B. C. y el golfo de California
+![](http://www.conchology.be/images/Label/320000sup/322816.jpg)
+Es una especie de importancia comercial, cuyas 
