--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -2,6 +2,6 @@
 
 Es una especie de la familia Pectinidae y se distribuye en las costas occidentales del sur de la península de B. C. y el golfo de California
 
-![](http://www.conchology.be/images/Label/320000sup/322816.jpg)
+<img src="http://www.conchology.be/images/Label/320000sup/322816.jpg"/ width = 50%>
 
 Es una especie de importancia comercial, cuyas poblaciones naturales se han visto disminuidas 
