--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -1,3 +1,4 @@
+![](../img/cicese.jpg)
 # Mano de león *Nodipecten subnodosus*
 
 Es una especie de la familia Pectinidae y se distribuye en las costas occidentales del sur de la península de B. C. y el golfo de California
