--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -1,5 +1,5 @@
 ![](../img/cicese.jpg)
-![](https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg)
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 25%>
 # Mano de león *Nodipecten subnodosus*
 
 Es una especie de la familia Pectinidae y se distribuye en las costas occidentales del sur de la península de B. C. y el golfo de California
