--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -1,6 +1,6 @@
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
-# Mano de león *Nodipecten subnodosus*
+# Comparative growth and mortality of cultured Lion´s Paw scallops (*Nodipecten subnodosus*) from Gulf of California and Pacific populations and their reciprocal transplants
 
 Es una especie de la familia Pectinidae y se distribuye en las costas occidentales del sur de la península de B. C. y el golfo de California
 
