--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -2,7 +2,7 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 # Comparative growth and mortality of cultured Lion's Paw scallops (*Nodipecten subnodosus*) from Gulf of California and Pacific populations and their reciprocal transplants
 
-Es una especie de la familia Pectinidae y se distribuye en las costas occidentales del sur de la península de B. C. y el golfo de California
+La almeja mano de león es una especie que se localiza en las costas de la península de Baja California, tanto en el Pacífico como en el Golfo. Sin embargo ambas costas presentan diferencias, el Golfo de California muestra características subtropicales tales como temperatura cálida del agua y baja productividad primaria. Las costas del Pacífico son una transición entre la corriente de California que presenta aguas templadas y la corriente ecuatorial que presenta aguas tropicales.
 
 <center><img src="http://www.conchology.be/images/Label/320000sup/322816.jpg"/ width = 50%> </center>
 
