--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -2,8 +2,10 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 # Comparative growth and mortality of cultured Lion's Paw scallops (*Nodipecten subnodosus*) from Gulf of California and Pacific populations and their reciprocal transplants
 
-La almeja mano de león es una especie que se localiza en las costas de la península de Baja California, tanto en el Pacífico como en el Golfo. Sin embargo ambas costas presentan diferencias, el Golfo de California muestra características subtropicales tales como temperatura cálida del agua y baja productividad primaria. Las costas del Pacífico son una transición entre la corriente de California que presenta aguas templadas y la corriente ecuatorial que presenta aguas tropicales.
+La almeja mano de león es una especie que se localiza en las costas de la península de Baja California, tanto en el Pacífico como en el Golfo. Sin embargo ambas costas presentan diferencias, el Golfo de California muestra características subtropicales tales como temperatura cálida del agua y baja productividad primaria. Las costas del Pacífico son una transición entre la corriente de California que presenta aguas templadas y la corriente ecuatorial que presenta aguas tropicales. 
+En este estudio se comparo el crecimiento y la supervivencia de poblaciones de almeja mano de león del golfo de California y del Pacífico y sus transplantes de sitio, respectivamente, en cultivo suspendido y en aguas profundas. En el Golfo el cultivo se localizo en El Pardito y en el Pacífico en el estero San Buto.
+Las almejas maduras se colectaron de poblaciones silvestres en el Pardito y Guerrero Negro y la semilla se produjo en laboratorio. El experimento tuvo una duración de 18 meses y se encontró que el sitio de cultivo, el origen de la población y la técnica de cultivo afecto significativamente el crecimiento y la mortalidad de la almeja.
 
 <center><img src="http://www.conchology.be/images/Label/320000sup/322816.jpg"/ width = 50%> </center>
 
-Es una especie de importancia comercial, cuyas poblaciones naturales se han visto disminuidas 
+
