--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -4,11 +4,11 @@
 
 La almeja mano de león es una especie que se localiza en las costas de la península de Baja California, tanto en el Pacífico como en el Golfo. Sin embargo ambas costas presentan diferencias, el Golfo de California muestra características subtropicales tales como temperatura cálida del agua y baja productividad primaria. Las costas del Pacífico son una transición entre la corriente de California que presenta aguas templadas y la corriente ecuatorial que presenta aguas tropicales. 
 
-En este estudio se comparo el crecimiento y la supervivencia de poblaciones de almeja mano de león del golfo de California y del Pacífico y sus transplantes de sitio, respectivamente, en cultivo suspendido y en aguas profundas. En el Golfo el cultivo se localizo en El Pardito y en el Pacífico en el estero San Buto.
+En este estudio se comparó el crecimiento y la supervivencia de poblaciones de almeja mano de león del golfo de California y del Pacífico y sus trasplantes de sitio, respectivamente, en cultivo suspendido y en aguas profundas. En el Golfo el cultivo se localizó en El Pardito y en el Pacífico en el estero San Buto.
 
 Las almejas maduras se colectaron de poblaciones silvestres en el Pardito y Guerrero Negro y la semilla se produjo en laboratorio. El experimento tuvo una duración de 18 meses y se encontró que el sitio de cultivo, el origen de la población y la técnica de cultivo afecto significativamente el crecimiento y la mortalidad de la almeja.
 
-El cultivo en el Pacífico tuvo mejores resultados, con la población proveniente tanto del Pacífico como del Golfo, debido a que la disponibilidad de alimento es mayor que en el Golfo y la temperatura es en general más baja, lo que favorece el crecimiento de la almeja. En el cultivo que se realizo en el Golfo, las poblaciones del Pacífico mostraron un menor crecimiento y supervivencia, debido a que no estaban adaptadas a las condiciones ambientales.
+El cultivo en el Pacífico tuvo mejores resultados, con la población proveniente tanto del Pacífico como del Golfo, debido a que la disponibilidad de alimento es mayor que en el Golfo y la temperatura es en general más baja, lo que favorece el crecimiento de la almeja. En el cultivo que se realizó en el Golfo, las poblaciones del Pacífico mostraron un menor crecimiento y supervivencia, debido a que no estaban adaptadas a las condiciones ambientales.
 
 <center><img src="http://www.conchology.be/images/Label/320000sup/322816.jpg"/ width = 50%> </center>
 
