--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -2,6 +2,10 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 # Comparative growth and mortality of cultured Lion's Paw scallops (*Nodipecten subnodosus*) from Gulf of California and Pacific populations and their reciprocal transplants
 
+## Comparative growth and mortality of cultured Lion's Paw scallops (*Nodipecten subnodosus*) from Gulf of California and Pacific populations and their reciprocal transplants
+
+### Comparative growth and mortality of cultured Lion's Paw scallops (*Nodipecten subnodosus*) from Gulf of California and Pacific populations and their reciprocal transplants
+
 La almeja mano de león es una especie que se localiza en las costas de la península de Baja California, tanto en el Pacífico como en el Golfo. Sin embargo ambas costas presentan diferencias, el Golfo de California muestra características subtropicales tales como temperatura cálida del agua y baja productividad primaria. Las costas del Pacífico son una transición entre la corriente de California que presenta aguas templadas y la corriente ecuatorial que presenta aguas tropicales. 
 
 En este estudio se comparó el crecimiento y la supervivencia de poblaciones de almeja mano de león del golfo de California y del Pacífico y sus trasplantes de sitio, respectivamente, en cultivo suspendido y en aguas profundas. En el Golfo el cultivo se localizó en El Pardito y en el Pacífico en el estero San Buto.
@@ -10,6 +14,8 @@ Las almejas maduras se colectaron de poblaciones silvestres en el Pardito y Guer
 
 El cultivo en el Pacífico tuvo mejores resultados, con la población proveniente tanto del Pacífico como del Golfo, debido a que la disponibilidad de alimento es mayor que en el Golfo y la temperatura es en general más baja, lo que favorece el crecimiento de la almeja. En el cultivo que se realizó en el Golfo, las poblaciones del Pacífico mostraron un menor crecimiento y supervivencia, debido a que no estaban adaptadas a las condiciones ambientales.
 
-<center><img src="http://www.conchology.be/images/Label/320000sup/322816.jpg"/ width = 50%> </center>
+<img src="http://www.conchology.be/images/Label/320000sup/322816.jpg"/ width = 75%>
+<img src="http://www.conchology.be/images/Label/320000sup/322816.jpg"/ width = 50%>
+<center><img src="http://www.conchology.be/images/Label/320000sup/322816.jpg"/ width = 25%> </center>
 
 
