--- a/Resumen20160304.md
+++ b/Resumen20160304.md
@@ -12,3 +12,8 @@ Las almejas maduras se colectaron de poblaciones silvestres en el Pardito y Guer
 El cultivo en el Pacífico tuvo mejores resultados, con la población proveniente tanto del Pacífico como del Golfo, debido a que la disponibilidad de alimento es mayor que en el Golfo y la temperatura es en general más baja, lo que favorece el crecimiento de la almeja. En el cultivo que se realizó en el Golfo, las poblaciones del Pacífico mostraron un menor crecimiento y supervivencia, debido a que no estaban adaptadas a las condiciones ambientales.
 
 <img src="https://raw.githubusercontent.com/Oviedo24/Resumenes-labgen/ad69b1225b517182f2b3dc129503e78a3a483aac/img/Sin.titulo.jpg" / width = 50%>
+
+
+Referencia:
+Ibarra, A. M., Petersen, J. L., Famula, T. R. y May, B. 2006. Characterization of 35 microsatellite loci in the Pacific lion-paw scallop (*Nodipecten subnodosus*) and their cross-species amplification in four other scallops of the Pectinidae family. Molecular Ecology Notes (6):153-156.
+ 
