--- a/Resumen20160318.md
+++ b/Resumen20160318.md
@@ -1,2 +1,2 @@
 
-<img scr="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg" / width = 15%> 
+<img scr="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg?raw=true" / width = 15%> 
