--- a/Resumen20160318.md
+++ b/Resumen20160318.md
@@ -1,5 +1,5 @@
 
-<img scr="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg?raw=true" / width = 15%> 
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
 ### Notes on the growth, survival and reproduction of the lion's paw scallop *Nodipecten subnodosus* maintained in a suspended culture
 
