--- a/Resumen20160318.md
+++ b/Resumen20160318.md
@@ -6,7 +6,7 @@
 
 La almeja mano de león es la más grande de todas las especies de pectínidos, alcanzando una longitud máxima de 218 mm. El objetivo de este estudio fue evaluar el crecimiento, supervivencia y reproducción de la almeja en cultivo suspendido de long-line a partir de Marzo 1999 hasta Noviembre 2002, para esto juveniles de 4 meses y aproximadamente 20 mm de talla de la concha se colocaron en Bahía Juncalito, B.C.S. en Febrero de 1999 en bolsas dentro de cajas Nestier, las cuales se colocaron a 1 m sobre el fondo durante la marea baja.  
 
-<img src="<img src="http://octavodia.mx/imagenes/2013/09/02/crisis-en-guerrero-negro-cae-produccion-de-almeja-mano-de-leon-en-80/m-1378173718_637x330.JPG" / width = 25%>
+<img src="<img src="http://g02.a.alicdn.com/kf/HTB1msnxJXXXXXbXXVXXq6xXFXXXP/14-15-cm-le%C3%B3n-garra-vieiras-almeja-grande-Shell-artesan%C3%ADas-de-concha-Natural-de-marina-espec%C3%ADmenes.jpg" / width = 25%>
 
 
 La supervivencia fue del 100% durante los primeros tres meses, para Octubre del mismo año fue de 89%, pero para Noviembre de 2001 bajo a 40% como consecuencia de los efectos del huracán Juliette que ocurrió en Octubre 2001.
