--- a/Resumen20160318.md
+++ b/Resumen20160318.md
@@ -9,7 +9,7 @@ La supervivencia fue del 100% durante los primeros tres meses, para Octubre del 
 En cada muestreo se determinó el peso del tejido blando, el musculo aductor y el peso húmedo de 5 almejas, asimismo sus gónadas se fijaron en formalina al 10% para análisis histológicos; los cuales mostraron que las almejas maduras se presentaron en Junio-Julio 2000 cuando la altura de la concha oscilaba entre 68-72 mm. El desove ocurrió cuando las almejas tenían dos años. Las almejas alcanzaron una media en la altura de la concha de 57 mm a los 12 meses. En promedio la tasa de crecimiento fue de 4 mm/mes desde el inicio del experimento y hasta los 16 meses de cultivo, a partir de allí la tasa de crecimiento disminuyó a 1.3 mm/mes hasta el final del experimento, esto como consecuencia del inicio del desarrollo gonadal.
 El crecimiento de la almeja mano de león ya ha sido evaluado en diferentes localidades a lo largo de la costa de B.C. aunque las comparaciones no siempre son apropiadas debido a las diferencias en tiempo, localidad, origen de la semilla y los reproductores. Por ejemplo, en Bahía Juncalito la tasa de crecimiento fue de 57 mm/año, se tienen registros de 54 mm/año en La Paz; y en las costas del Pacifico aumenta a 76 mm/año en Laguna Ojo de Liebre y 92 mm/año en Bahía Magdalena, esto sugiere que las costas del Pacífico pueden ser una mejor localidad para el cultivo de la almeja mano de león, principalmente por la temperatura y la disponibilidad de alimento.
 
-<img src="https://raw.githubusercontent.com/Oviedo24/Resumenes-labgen/ad69b1225b517182f2b3dc129503e78a3a483aac/img/Sin.titulo.jpg" / width = 50%>
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/almeja.JPG" / width = 50%>
 
 Referencia: Villalejo-Fuerte, M. y M. Arellano-Martínez, M. Robles-Mungaray and B. P. Ceballos-Vázquez, 2004. Notes on the growth, survival, and reproduction of the lion’s paw scallop Nodipecten subnodosus maintained in a suspended culture. Hidrobiológica 14 (2): 161-165 
 http://investigacion.izt.uam.mx/rehb/publicaciones/14-2PDF/161-165NC%20VILLALEJO.pdf
