--- a/Resumen20160318.md
+++ b/Resumen20160318.md
@@ -11,5 +11,5 @@ El crecimiento de la almeja mano de león ya ha sido evaluado en diferentes loca
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/almeja.JPG" / width = 50%>
 
-Referencia: Villalejo-Fuerte, M. y M. Arellano-Martínez, M. Robles-Mungaray and B. P. Ceballos-Vázquez, 2004. Notes on the growth, survival, and reproduction of the lion’s paw scallop Nodipecten subnodosus maintained in a suspended culture. Hidrobiológica 14 (2): 161-165 
+Referencia: Villalejo-Fuerte, M. y M. Arellano-Martínez, M. Robles-Mungaray and B. P. Ceballos-Vázquez, 2004. Notes on the growth, survival, and reproduction of the lion’s paw scallop *Nodipecten subnodosus* maintained in a suspended culture. Hidrobiológica 14 (2): 161-165 
 http://investigacion.izt.uam.mx/rehb/publicaciones/14-2PDF/161-165NC%20VILLALEJO.pdf
