--- a/Resumen20160318.md
+++ b/Resumen20160318.md
@@ -7,7 +7,7 @@
 La almeja mano de león es la más grande de todas las especies de pectínidos, alcanzando una longitud máxima de 218 mm. El objetivo de este estudio fue evaluar el crecimiento, supervivencia y reproducción de la almeja en cultivo suspendido de long-line a partir de Marzo 1999 hasta Noviembre 2002, para esto juveniles de 4 meses y aproximadamente 20 mm de talla de la concha se colocaron en Bahía Juncalito, B.C.S. en Febrero de 1999 en bolsas dentro de cajas Nestier, las cuales se colocaron a 1 m sobre el fondo durante la marea baja.  
 La supervivencia fue del 100% durante los primeros tres meses, para Octubre del mismo año fue de 89%, pero para Noviembre de 2001 bajo a 40% como consecuencia de los efectos del huracán Juliette que ocurrió en Octubre 2001.
 En cada muestreo se determinó el peso del tejido blando, el musculo aductor y el peso húmedo de 5 almejas, asimismo sus gónadas se fijaron en formalina al 10% para análisis histológicos; los cuales mostraron que las almejas maduras se presentaron en Junio-Julio 2000 cuando la altura de la concha oscilaba entre 68-72 mm. El desove ocurrió cuando las almejas tenían dos años. Las almejas alcanzaron una media en la altura de la concha de 57 mm a los 12 meses. En promedio la tasa de crecimiento fue de 4 mm/mes desde el inicio del experimento y hasta los 16 meses de cultivo, a partir de allí la tasa de crecimiento disminuyó a 1.3 mm/mes hasta el final del experimento, esto como consecuencia del inicio del desarrollo gonadal.
-El crecimiento de la almeja mano de león ya ha sido evaluado en diferentes localidades a lo largo de la costa de B.C. aunque las comparaciones no siempre son apropiadas debido a las diferencias en tiempo, localidad, origen de la semilla y los reproductores. Por ejemplo, en Bahía Juncalito la tasa de crecimiento fue de 57 mm/año, se tienen registros de 54 mm/año en La Paz; y en las costas del Pacifico aumenta a 76 mm/año en Laguna Ojo de Liebre y 92 mm/año en Bahía Magdalena, esto sugiere que las costas del Pacífico pueden ser una mejor localidad para el cultivo de la almeja mano de león, principalmente por la temperatura y la disponibilidad de alimento.
+El crecimiento de la almeja mano de león ya ha sido evaluado en diferentes localidades a lo largo de la costa de B.C. aunque las comparaciones no siempre son apropiadas debido a las diferencias en tiempo, localidad, origen de la semilla y los reproductores. Por ejemplo, en Bahía Juncalito la tasa de crecimiento fue de 57 mm/año, se tienen registros de 54 mm/año en La Paz; y en las costas del Pacífico aumenta a 76 mm/año en Laguna Ojo de Liebre y 92 mm/año en Bahía Magdalena, esto sugiere que las costas del Pacífico pueden ser una mejor localidad para el cultivo de la almeja mano de león, principalmente por la temperatura y la disponibilidad de alimento.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/almeja.JPG" / width = 25%>
 
