--- a/Resumen20160331.md
+++ b/Resumen20160331.md
@@ -4,5 +4,11 @@
 ### A first-generation linkage map of the Pacific lion-paw scallop (*Nodipecten subnodosus*): Initial evidence of QTL for size traits and markers linked to orange shell color
 
 Los recursos genómicos para organismos como la almeja mano de león son pocos, por ello se crearon los primeros mapas de ligamiento genético para esta especie usando 73 microsatélites y AFLP con una familia de hermanos completos. La creación de un mapa de ligamiento genético es comúnmente el primer paso en el desarrollo de recursos genéticos para organismos no modelo. Estos mapas son usados para identificar loci de caracteres cuantitativos que son de importancia para la acuicultura, como son la longitud, el color naranja de la concha y principalmente el musculo aductor que es lo que se consume. 
+
 Se realizó la cruza entre organismos de la Laguna Ojo de Liebre, se realizó la genotipificación con los microsatélites y AFLP mediante PCR multiplex para los reproductores y la progenie y se crearon los mapas de ligamiento. El mapa de la hembra estuvo conformado por 27 grupos de ligamiento y una longitud de 919.71 cM. El mapa del macho tuvo una longitud de 963.66 cM incluyendo 149 marcadores colocados en 20 grupos de ligamiento y el mapa combinado incluyo 22 grupos de ligamiento cubriendo 1124.12 cM.
+
 Se identificaron cuatro loci microsatélites asociados con el pigmento de color naranja, en general las longitudes del mapa del macho y de la hembra fueron similares. El desarrollo de estos mapas y la identificación de grupos de ligamiento para rasgos de crecimiento podrían ayudar en la selección asistida por marcadores para mejorar el crecimiento de la almeja mano de león en la acuicultura.
+
+
+Referencia: Petersen, J. L., Baerwald, M. R., Ibarra, A. M. y  May, B. 2012. A first-generation linkage map of the Pacific lion-paw scallop (*Nodipecten subnodosus*): Initial evidence of QTL for size traits and markers linked to orange shell color.  Aquaculture: 200-209
+http://www.sciencedirect.com/science/article/pii/S0044848612002001
