--- a/Resumen20160331.md
+++ b/Resumen20160331.md
@@ -7,6 +7,8 @@ Los recursos genómicos para organismos como la almeja mano de león son pocos, 
 
 Se realizó la cruza entre organismos de la Laguna Ojo de Liebre, se realizó la genotipificación con los microsatélites y AFLP mediante PCR multiplex para los reproductores y la progenie y se crearon los mapas de ligamiento. El mapa de la hembra estuvo conformado por 27 grupos de ligamiento y una longitud de 919.71 cM. El mapa del macho tuvo una longitud de 963.66 cM incluyendo 149 marcadores colocados en 20 grupos de ligamiento y el mapa combinado incluyo 22 grupos de ligamiento cubriendo 1124.12 cM.
 
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Mapa%20de%20ligamiento.jpg" / width = 50%>
+
 Se identificaron cuatro loci microsatélites asociados con el pigmento de color naranja, en general las longitudes del mapa del macho y de la hembra fueron similares. El desarrollo de estos mapas y la identificación de grupos de ligamiento para rasgos de crecimiento podrían ayudar en la selección asistida por marcadores para mejorar el crecimiento de la almeja mano de león en la acuicultura.
 
 
