--- a/Resumen20160407.md
+++ b/Resumen20160407.md
@@ -1,3 +1,13 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
-### Comparative growth and mortality of cultured Lion's Paw scallops (*Nodipecten subnodosus*) from Gulf of California and Pacific populations and their reciprocal transplants
+### Comparative analysis of the reproductive strategy of lion’s paw scallop *Nodipecten subnodosus* in Baja California Sur, Mexico
+
+
+Se estudió la estrategia reproductiva de la almeja mano león en sistema de cultivo en suspensión en linternas japonesas en Bahía Tortugas, B. C. S. durante un ciclo anual. Treinta almejas de 7-8 meses de edad se recolectaron mensualmente durante el ciclo anual Abril 2009-Marzo 2010. También se registró la temperatura del agua diaria y la concentración de clorofila a. Las almejas recolectadas se diseccionaron para extraer las gónadas y hacer análisis histológicos. Las gónadas se clasificaron como indiferenciadas, en desarrollo temprano, desarrollo tardío, madura, parcialmente desovada, desovada y reabsorbida.
+
+Se encontró una alta frecuencia de gónadas maduras durante todo el año, lo cual indica que la reproducción es continua, con dos eventos principales de madurez/desove: julio-septiembre y diciembre-marzo. La almeja presentó dos estrategias de reproducción: una oportunista en la que la gametogénesis estuvo regulada por la energía del alimento que ingería recientemente y otra estrategia conservadora dónde el índice de la glándula digestiva disminuyó y el índice del músculo aumento, indicando un uso parcial de reservas energéticas para sustentar la gametogénesis.
+
+Se cree que N. subnodosus puede adoptar una estrategia oportunista o estrategia conservadora para maximizar el rendimiento reproductivo en función de las condiciones ambientales prevalentes en Bahía Tortugas.
+
+Referencia: Angel-Dapa, M. A., Arellano-Martínez, M., Ceballos-Vázquez, B. P., Acosta-Salmón, H. y  Saucedo, P. E. 2015. Comparative analysis of the reproductive strategy of lion’s paw scallop Nodipecten subnodosus in Baja California Sur, Mexico.  Lat. Am. J. Aquat. Res. 43 (3): 616:620. 
+http://www.scielo.cl/pdf/lajar/v43n3/art25.pdf
