--- a/Resumen20160407.md
+++ b/Resumen20160407.md
@@ -11,5 +11,7 @@ Se cree que N. subnodosus puede adoptar una estrategia oportunista o estrategia 
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/g%C3%B3nada.jpg" / width = 30%>
 
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/linterna2.jpg / width = 30%>
+
 Referencia: Angel-Dapa, M. A., Arellano-Martínez, M., Ceballos-Vázquez, B. P., Acosta-Salmón, H. y  Saucedo, P. E. 2015. Comparative analysis of the reproductive strategy of lion’s paw scallop Nodipecten subnodosus in Baja California Sur, Mexico.  Lat. Am. J. Aquat. Res. 43 (3): 616:620. 
 http://www.scielo.cl/pdf/lajar/v43n3/art25.pdf
