--- a/Resumen20160407.md
+++ b/Resumen20160407.md
@@ -7,7 +7,7 @@ Se estudió la estrategia reproductiva de la almeja mano león en sistema de cul
 
 Se encontró una alta frecuencia de gónadas maduras durante todo el año, lo cual indica que la reproducción es continua, con dos eventos principales de madurez/desove: julio-septiembre y diciembre-marzo. La almeja presentó dos estrategias de reproducción: una oportunista en la que la gametogénesis estuvo regulada por la energía del alimento que ingería recientemente y otra estrategia conservadora dónde el índice de la glándula digestiva disminuyó y el índice del músculo aumento, indicando un uso parcial de reservas energéticas para sustentar la gametogénesis.
 
-Se cree que N. subnodosus puede adoptar una estrategia oportunista o estrategia conservadora para maximizar el rendimiento reproductivo en función de las condiciones ambientales prevalentes en Bahía Tortugas.
+Se cree que *N. subnodosus* puede adoptar una estrategia oportunista o estrategia conservadora para maximizar el rendimiento reproductivo en función de las condiciones ambientales prevalentes en Bahía Tortugas.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/linterna2.jpg" / width = 50%>
 
