--- a/Resumen20160415.md
+++ b/Resumen20160415.md
@@ -2,3 +2,12 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
 ### Thirty-seven additional microsatellite loci in the Pacific lion-paw scallop (*Nodipecten subnodosus*) and cross-amplification in other pectinids
+
+En un trabajo previo Ibarra et al. (2006) caracterizaron 35 microsatélites en la  almeja mano de león (*Nodipecten subnodosus*) para su uso en conservación y genética de población de la especie. Como muchas especies marinas, las poblaciones naturales han disminuido debido a la sobrepesca. Además de la caracterización de la diversidad genética dentro y entre poblaciones, el desarrollo de marcadores microsatélite permitirá el mapeo del genoma, para identificar rasgos de interés para la acuicultura como el crecimiento.
+En este estudio se caracterizaron 37 nuevos marcadores microsatélite para la almeja mano de león y se realizó la amplificación cruzada en otras cuatro especies de pectínidos. 
+La diversidad genética se estimó usando 24 individuos de la Laguna Ojo de Liebre, B.C.S. La amplificación cruzada se realizó con *N. nodosus* (una especie muy parecida a *N. subnodosus*, pero que se distribuye en Centroamérica del lado del Atlántico) y en tres especies más del género *Argopecten*; *A. irradians*, *A. purpuratus* y *A. ventricosus*.
+La riqueza alélica en *N. subnodosus* tuvo una variación de 5 a 27 alelos por locus. Diez loci estuvieron fuera del equilibrio de Hardy-Weinberg posiblemente debido  a la presencia de alelos nulos. Dieciséis marcadores amplificaron en *N. nodosus*, mientras que en *A. ventricosus* no se observó amplificación y en *A. irradians* y *A. purpuratus* amplificaron 5 y 2 loci, respectivamente.
+
+Referencia
+
+Petersen, J., Ibarra, A., y May, B. (2009). Thirty-seven additional microsatellite loci in the Pacific lion-paw scallop (*Nodipecten subnodosus*) and cross-amplification in other pectinids. Conservation Genet Resour, 101-105. DOI 10.1007/s12686-009-9025-8
