--- a/Resumen20160415.md
+++ b/Resumen20160415.md
@@ -8,8 +8,9 @@ En este estudio se caracterizaron 37 nuevos marcadores microsatélite para la al
 La diversidad genética se estimó usando 24 individuos de la Laguna Ojo de Liebre, B.C.S. La amplificación cruzada se realizó con *N. nodosus* (una especie muy parecida a *N. subnodosus*, pero que se distribuye en Centroamérica del lado del Atlántico) y en tres especies más del género *Argopecten*; *A. irradians*, *A. purpuratus* y *A. ventricosus*.
 La riqueza alélica en *N. subnodosus* tuvo una variación de 5 a 27 alelos por locus. Diez loci estuvieron fuera del equilibrio de Hardy-Weinberg posiblemente debido  a la presencia de alelos nulos. Dieciséis marcadores amplificaron en *N. nodosus*, mientras que en *A. ventricosus* no se observó amplificación y en *A. irradians* y *A. purpuratus* amplificaron 5 y 2 loci, respectivamente.
 
-Referencia
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/images.jpg" / width = 50%>
 
+Referencia:
 Petersen, J., Ibarra, A., y May, B. (2009). Thirty-seven additional microsatellite loci in the Pacific lion-paw scallop (*Nodipecten subnodosus*) and cross-amplification in other pectinids. Conservation Genet Resour, 101-105. DOI 10.1007/s12686-009-9025-8
 http://link.springer.com/article/10.1007%2Fs12686-009-9025-8
 
