--- a/Resumen20160422.md
+++ b/Resumen20160422.md
@@ -2,3 +2,5 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
 ### Genetic Aspects of Hatchery Rearing of the Scallop, *Pecten maximus* (L.)
+
+*Pecten maximus* es hermafrodita y en desoves de laboratorio, un poco de auto-fertilización es la regla más que la excepción.
