--- a/Resumen20160422.md
+++ b/Resumen20160422.md
@@ -3,4 +3,14 @@
 
 ### Genetic Aspects of Hatchery Rearing of the Scallop, *Pecten maximus* (L.)
 
-*Pecten maximus* es hermafrodita y en desoves de laboratorio, un poco de auto-fertilización es la regla más que la excepción.
+*Pecten maximus* es hermafrodita y en desoves de laboratorio, un poco de auto-fertilización es la regla más que la excepción. La principal consecuencia de la auto-fertilización en poblaciones naturales es la reducción en heterocigosidad. Esta reducción en heterocigosidad reduce la viabilidad y tasas de crecimiento
+
+
+
+
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/007-Pecten-maximus.jpg" / width = 30%>
+
+Referencia:
+Petersen, J., Ibarra, A., y May, B. (2009). Thirty-seven additional microsatellite loci in the Pacific lion-paw scallop (*Nodipecten subnodosus*) and cross-amplification in other pectinids. Conservation Genet Resour, 101-105. DOI 10.1007/s12686-009-9025-8
+http://link.springer.com/article/10.1007%2Fs12686-009-9025-8
