--- a/Resumen20160422.md
+++ b/Resumen20160422.md
@@ -9,7 +9,7 @@
 
 
 
-<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/007-Pecten-maximus.jpg" / width = 30%>
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/007-Pecten-maximus.JPG" / width = 30%>
 
 Referencia:
 Petersen, J., Ibarra, A., y May, B. (2009). Thirty-seven additional microsatellite loci in the Pacific lion-paw scallop (*Nodipecten subnodosus*) and cross-amplification in other pectinids. Conservation Genet Resour, 101-105. DOI 10.1007/s12686-009-9025-8
