--- a/Resumen20160422.md
+++ b/Resumen20160422.md
@@ -3,13 +3,14 @@
 
 ### Genetic Aspects of Hatchery Rearing of the Scallop, *Pecten maximus* (L.)
 
-*Pecten maximus* es hermafrodita y en desoves de laboratorio, un poco de auto-fertilización es la regla más que la excepción. La principal consecuencia de la auto-fertilización en poblaciones naturales es la reducción en heterocigosidad. Esta reducción en heterocigosidad reduce la viabilidad y tasas de crecimiento
-
-
-
-
+*Pecten maximus* es un bivalvo de importancia comercial en Europa. Es una almeja hermafrodita, sin embargo, comparada con otros bivalvos, muestra un alto porcentaje de loci polimórficos (72%). Como se sabe la principal consecuencia de la auto-fertilización en poblaciones naturales es la reducción en heterocigosidad. Esta reducción en heterocigosidad reduce la viabilidad y tasas de crecimiento. En este artículo se hizo una revisión de la información existente sobre su cultivo así como la inducción a la triploidía. 
+Se realizaron ensayos en laboratorio para comparar el rendimiento de las larvas utilizando distintos progenitores para el desove, los resultados demostraron que la variación genética natural entre almejas puede ser suficiente para producir grandes variaciones de la normalidad de las larvas producidas y que los niveles altos de anomalías de larvas puede ser inevitable en la producción en criaderos de almejas.
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/007-Pecten-maximus.JPG" / width = 50%>
+
+En los experimentos para inducción a la triploidía se utilizó Citocalasina-B, se encontró que la dosis más efectiva fue de 0.5 mg/L añadiéndose 10 minutos después de la fertilización por un período de 20 minutos; el resultado fue un 30% de triploides. 
+El uso de Citocalasina-B redujo el número de larvas producidas, sin embargo no produjo larvas anormales.
+
 
 Referencia:
 Beaumont, A.R., 1986. Genetics aspects of hatchery rearing of the scallop, *Pecten maximus* (L.). Aquaculture 57,
