--- a/Resumen20160422.md
+++ b/Resumen20160422.md
@@ -14,6 +14,5 @@ El uso de Citocalasina-B redujo el número de larvas producidas, sin embargo no 
 
 
 Referencia:
-Beaumont, A.R., 1986. Genetics aspects of hatchery rearing of the scallop, *Pecten maximus* (L.). Aquaculture 57,
-99– 110.
-http://www.sciencedirect.com/science/article/pii/0044848686901869
+[Beaumont, A.R., 1986. Genetics aspects of hatchery rearing of the scallop, *Pecten maximus* (L.). Aquaculture 57,
+99– 110.](http://www.sciencedirect.com/science/article/pii/0044848686901869)
