--- a/Resumen20160429.md
+++ b/Resumen20160429.md
@@ -1,7 +1,7 @@
 
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
-## Cultivo experimental de la almeja mano de león *Nodipecten subnodosus* (Sowerby, 1835) en la costa norte de Sinaloa, México
+# Cultivo experimental de la almeja mano de león *Nodipecten subnodosus* (Sowerby, 1835) en la costa norte de Sinaloa, México
 
 En México se tienen un total de 22 especies de almejas explotables comercialmente, entre las que se encuentra la almeja mano de león con una importancia sobresaliente, debido a su gran aceptación en el mercado nacional y extranjero, además de ser una de las especies que alcanza las mayores tallas, sin embargo su pesquería se encuentra sobreexplotada. Por ello es necesario determinar sitios potenciales para realizar cultivos comerciales, con base en esto el objetivo de este estudio fue evaluar la supervivencia y el crecimiento de N. subnodosus en los sistemas lagunares El Colorado (Ahome) y Macapule (Guasave), Sinaloa.
 
