--- a/Resumen20160429.md
+++ b/Resumen20160429.md
@@ -9,9 +9,10 @@ En México se tienen un total de 22 especies de almejas explotables comercialmen
 
 Se obtuvieron semillas del CIBNOR con un tamaño de 3-5 mm. Se realizaron tres cultivos en suspensión; dos siembras en el estero La Curvina del sistema lagunar El Colorado en febrero de 2005 (1000 semillas) y marzo 2005 (3000 semillas), y una siembra en el estero La Piedra del sistema lagunar Macapule (2000 semillas) en febrero 2005. Durante el período de cultivo se realizaron biometrías quincenalmente, además del monitoreo de la supervivencia. También se tomaron lecturas de salinidad, temperatura del agua, oxígeno disuelto, pH, transparencia, se determinó la cantidad de nutrientes y clorofila “a”. 
 
-Los resultados obtenidos para la siembra #1 en febrero-agosto 2005 (212 días), mostraron que *N. subnodosus* tuvo un crecimiento de 0.04-0.48 mm/día. La talla en promedio al finalizar el cultivo fue de 45 mm y un peso total promedio de 20 g. En la siembra marzo-agosto 2005 (171 días) la almeja tuvo un crecimiento de 0.15-0.40 mm/día. La talla promedio al finalizar el cultivo fue de 43 mm y un peso total promedio de 17 g. La supervivencia en este sistema lagunar fue de 4%. Por el contrario, el cultivo en Guasave finalizó en Marzo de 2005 a los 42 días de cultivo con 0% de supervivencia, debido a variaciones en la salinidad y sedimento en suspensión.
-El crecimiento de la almeja mano de león puede ser aceptable en el sistema lagunar El Colorado, aun así es de suma importancia buscar sitios para desarrollar el cultivo de esta especie para alcanzar las tallas máximas 
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Biometr%C3%ADas.jpg" / width = 40%>
 
-<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Biometr%C3%ADas.jpg" / width = 50%>
+Los resultados obtenidos para la siembra #1 en febrero-agosto 2005 (212 días), mostraron que *N. subnodosus* tuvo un crecimiento de 0.04-0.48 mm/día. La talla en promedio al finalizar el cultivo fue de 45 mm y un peso total promedio de 20 g. En la siembra marzo-agosto 2005 (171 días) la almeja tuvo un crecimiento de 0.15-0.40 mm/día. La talla promedio al finalizar el cultivo fue de 43 mm y un peso total promedio de 17 g. La supervivencia en este sistema lagunar fue de 4%. Por el contrario, el cultivo en Guasave finalizó en Marzo de 2005 a los 42 días de cultivo con 0% de supervivencia, debido a variaciones en la salinidad y sedimento en suspensión.
+El crecimiento de la almeja mano de león puede ser aceptable en el sistema lagunar El Colorado, aun así es de suma importancia buscar sitios para desarrollar el cultivo de esta especie para alcanzar las tallas máximas.
+
 
 Referencia: Diarte-Plata, G., A. M., Góngora-Gómez, J. A., Hernández-Sepúlveda, J. M., Mazón-Suástegui y L., Espinosa-Carreón. 2007. Cultivo experimental de la almeja Mano de León *Nodipecten subnodosus* (Sowerby, 1835) en la costa Norte de Sinaloa, México. pp 141-143. En: Estudios sobre Malacología y Conquiliología en México. Ríos-Jara, E., M. C., Esqueda-González y C. M., Galván-Villa (eds). Universidad de Guadalajara, México. 286 p.
