--- a/Resumen20160429.md
+++ b/Resumen20160429.md
@@ -16,4 +16,4 @@ El crecimiento de la almeja mano de león puede ser aceptable en el sistema lagu
 
 
 
-Referencia: Diarte-Plata, G., A. M., Góngora-Gómez, J. A., Hernández-Sepúlveda, J. M., Mazón-Suástegui y L., Espinosa-Carreón. 2007. Cultivo experimental de la almeja Mano de León *Nodipecten subnodosus* (Sowerby, 1835) en la costa Norte de Sinaloa, México. pp 141-143. En: Estudios sobre Malacología y Conquiliología en México. Ríos-Jara, E., M. C., Esqueda-González y C. M., Galván-Villa (eds). Universidad de Guadalajara, México. 286 p.
+### Referencia: Diarte-Plata, G., A. M., Góngora-Gómez, J. A., Hernández-Sepúlveda, J. M., Mazón-Suástegui y L., Espinosa-Carreón. 2007. Cultivo experimental de la almeja Mano de León *Nodipecten subnodosus* (Sowerby, 1835) en la costa Norte de Sinaloa, México. pp 141-143. En: Estudios sobre Malacología y Conquiliología en México. Ríos-Jara, E., M. C., Esqueda-González y C. M., Galván-Villa (eds). Universidad de Guadalajara, México. 286 p.
