--- a/Resumen20160504.md
+++ b/Resumen20160504.md
@@ -2,3 +2,5 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
 ### An Induced Mass Spawn of the Hermaphroditic Lion-Paw Scallop, *Nodipecten subnodosus*: Genetic Assignment of Maternal and Paternal Parentage
+#### Desove en masa inducido de la almeja hermafrodita mano de león, *Nodipecten subnodosus*: Asignación genética de parentesco materno y paterno
+[Petersen, J., Ibarra, A., Ramírez, J., y May, B. (2008). An induced mass spawn of the hermaphroditic lion-paw scallop, Nodipecten subnodosus: genetic assignment of maternal and paternal parentage. Journal of Heredity, 99(4), 337-348.](http://jhered.oxfordjournals.org/content/99/4/337.full)
