--- a/Resumen20160504.md
+++ b/Resumen20160504.md
@@ -3,3 +3,18 @@
 
 ### An Induced Mass Spawn of the Hermaphroditic Lion-Paw Scallop, *Nodipecten subnodosus*: Genetic Assignment of Maternal and Paternal Parentage
 [Petersen, J., Ibarra, A., Ramírez, J., y May, B. (2008). An induced mass spawn of the hermaphroditic lion-paw scallop, Nodipecten subnodosus: genetic assignment of maternal and paternal parentage. Journal of Heredity, 99(4), 337-348.](http://jhered.oxfordjournals.org/content/99/4/337.full)
+
+El potencial de auto-fertilización de la almeja mano de león, junto con una alta fecundidad de más de 2 millones de huevos por desove por individuo, contribuye a una mayor posibilidad de variación en el éxito reproductivo, así como la endogamia en las generaciones posteriores. 
+
+El objetivo de este estudio fue utilizar marcadores microsatélite de DNA en conjunción con el DNA mitocondrial (mtDNA) para identificar el parentesco materno y paterno de una muestra de la progenie de un desove en masa y por lo tanto determinar el grado de contribución de cada desove.
+
+Para ello se utilizaron seis almejas (nombradas G1-G6), después del desove se tomó una muestra del músculo aductor para los análisis genéticos. Los genotipos de los 6 reproductores y 374 progenie se acoplaron a 6 loci microsatélites.
+Se alinearon dos secuencias de mtADN para el gen 16S rRNA. La secuencia consenso se introdujo en PRIMER3 para diseñar cebadores de PCR específicos para esta especie. El par de cebadores resultante amplificado de aproximadamente 415 pb del gen 16S rRNA fue:
+Nsub16SF (5'-GGGTAACATGGGGAGTCGT-3') y 
+Nsub16SR (5'-CAAACCCGCCCATCTATAAG-3').
+
+Los datos revelaron que el 51.7% de las progenies eran hermanos completos, con una contribución desigual de los 6 reproductores a la progenie. Tres  progenie fueron el resultado de la autofecundación. Todos los reproductores contribuyeron paternalmente (aunque desigualmente); sin embargo, solo 2 reproductores tuvieron la contribución materna. La asignación de parentesco mostró que los reproductores G1 y G3 contribuyeron con el 36.9% y el 39.1% respectivamente, de los gametos totales. La contribución de los reproductores G2, G4, G5, G6 y fue 6.4%, 1.3%, 10.9% y 5.5%, respectivamente.
+
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/Tabla.jpg" / width = 40%>
+
+Estos resultados ayudan a comprender a la composición genética de desove en masa inducidos y proporcionan una base para el desarrollo de las técnicas más eficaces de desove. 
