--- a/Resumen20160504.md
+++ b/Resumen20160504.md
@@ -2,7 +2,7 @@
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/cicese.jpg"/ width = 15%>
 
 ### An Induced Mass Spawn of the Hermaphroditic Lion-Paw Scallop, *Nodipecten subnodosus*: Genetic Assignment of Maternal and Paternal Parentage
-[Petersen, J., Ibarra, A., Ramírez, J., y May, B. (2008). An induced mass spawn of the hermaphroditic lion-paw scallop, Nodipecten subnodosus: genetic assignment of maternal and paternal parentage. Journal of Heredity, 99(4), 337-348.](http://jhered.oxfordjournals.org/content/99/4/337.full)
+[Petersen, J., Ibarra, A., Ramírez, J., y May, B. (2008). An induced mass spawn of the hermaphroditic lion-paw scallop, *Nodipecten subnodosus*: genetic assignment of maternal and paternal parentage. Journal of Heredity, 99(4), 337-348.](http://jhered.oxfordjournals.org/content/99/4/337.full)
 
 El potencial de auto-fertilización de la almeja mano de león, junto con una alta fecundidad de más de 2 millones de huevos por desove por individuo, contribuye a una mayor posibilidad de variación en el éxito reproductivo, así como la endogamia en las generaciones posteriores. 
 
