--- a/Resumen20160504.md
+++ b/Resumen20160504.md
@@ -8,6 +8,8 @@ El potencial de auto-fertilización de la almeja mano de león, junto con una al
 
 El objetivo de este estudio fue utilizar marcadores microsatélite de DNA en conjunción con el DNA mitocondrial (mtDNA) para identificar el parentesco materno y paterno de una muestra de la progenie de un desove en masa y por lo tanto determinar el grado de contribución de cada desove.
 
+<img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/almejitas.jpg" / width = 50%>
+
 Para ello se utilizaron seis almejas (nombradas G1-G6), después del desove se tomó una muestra del músculo aductor para los análisis genéticos. Los genotipos de los 6 reproductores y 374 progenie se acoplaron a 6 loci microsatélites.
 Se alinearon dos secuencias de mtADN para el gen 16S rRNA. La secuencia consenso se introdujo en PRIMER3 para diseñar cebadores de PCR específicos para esta especie. El par de cebadores resultante amplificado de aproximadamente 415 pb del gen 16S rRNA fue:
 Nsub16SF (5'-GGGTAACATGGGGAGTCGT-3') y 
