--- a/Resumen20160504.md
+++ b/Resumen20160504.md
@@ -12,8 +12,8 @@ El objetivo de este estudio fue utilizar marcadores microsatélite de DNA en con
 
 Para ello se utilizaron seis almejas (nombradas G1-G6), después del desove se tomó una muestra del músculo aductor para los análisis genéticos. Los genotipos de los 6 reproductores y 374 progenie se acoplaron a 6 loci microsatélites.
 Se alinearon dos secuencias de mtADN para el gen 16S rRNA. La secuencia consenso se introdujo en PRIMER3 para diseñar cebadores de PCR específicos para esta especie. El par de cebadores resultante amplificado de aproximadamente 415 pb del gen 16S rRNA fue:
-Nsub16SF (5'-GGGTAACATGGGGAGTCGT-3') y 
-Nsub16SR (5'-CAAACCCGCCCATCTATAAG-3').
+Nsub16SF (5'-TTCAAACGCACGTCATTTG-3') y 
+Nsub16SR (5'-CTTGGCACCATATTCGGAC-3').
 
 Los datos revelaron que el 51.7% de las progenies eran hermanos completos, con una contribución desigual de los 6 reproductores a la progenie. Tres  progenie fueron el resultado de la autofecundación. Todos los reproductores contribuyeron paternalmente (aunque desigualmente); sin embargo, solo 2 reproductores tuvieron la contribución materna. La asignación de parentesco mostró que los reproductores G1 y G3 contribuyeron con el 36.9% y el 39.1% respectivamente, de los gametos totales. La contribución de los reproductores G2, G4, G5, G6 y fue 6.4%, 1.3%, 10.9% y 5.5%, respectivamente.
 
