--- a/Resumen20160504.md
+++ b/Resumen20160504.md
@@ -11,7 +11,7 @@ El objetivo de este estudio fue utilizar marcadores microsatélite de DNA en con
 <img src="https://github.com/Oviedo24/Resumenes-labgen/blob/master/img/almejitas.jpg" / width = 50%>
 
 Para ello se utilizaron seis almejas (nombradas G1-G6), después del desove se tomó una muestra del músculo aductor para los análisis genéticos. Los genotipos de los 6 reproductores y 374 progenie se acoplaron a 6 loci microsatélites.
-Se alinearon dos secuencias de mtADN para el gen 16S rRNA. La secuencia consenso se introdujo en PRIMER3 para diseñar cebadores de PCR específicos para esta especie. El par de cebadores resultante amplificado de aproximadamente 415 pb del gen 16S rRNA fue:
+Se alinearon dos secuencias de mtDNA para el gen 16S rRNA. La secuencia consenso se introdujo en PRIMER3 para diseñar cebadores de PCR específicos para esta especie. El par de cebadores resultante amplificado de aproximadamente 415 pb del gen 16S rRNA fue:
 Nsub16SF (5'-TTCAAACGCACGTCATTTG-3') y 
 Nsub16SR (5'-CTTGGCACCATATTCGGAC-3').
 
